--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/sleonia/CalorieTreker#readme",
   "dependencies": {
     "eslint": "^7.9.0",
-    "node-telegram-bot-api": "^0.50.0"
+    "node-telegram-bot-api": "^0.50.0",
+    "telegraf": "^3.38.0"
   }
 }
