--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/sleonia/CalorieTreker#readme",
   "dependencies": {
     "node-telegram-bot-api": "^0.50.0",
+    "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
     "telegraf": "^3.38.0"
   },
