--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Telegram bot for counter calorie",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sleonia/CalorieTreker#readme",
   "dependencies": {
+    "enzyme": "^3.11.0",
     "node-telegram-bot-api": "^0.50.0",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "eslint": "^7.9.0",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^26.4.2"
   }
 }
