--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node-telegram-bot-api": "^0.50.0",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
-    "telegraf": "^3.38.0"
+    "telegraf": "^3.38.0",
+    "telegraf-inline-menu": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
