--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "eslint": "^7.9.0",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "jsdoc-to-markdown": "^6.0.1"
   }
 }
