--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Telegram bot for counter calorie",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "jest"
   },
   "repository": {
@@ -27,7 +28,6 @@
   "devDependencies": {
     "eslint": "^7.9.0",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^26.4.2",
-    "jsdoc-to-markdown": "^6.0.1"
+    "jest": "^26.4.2"
   }
 }
