--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "homepage": "https://github.com/sleonia/CalorieTreker#readme",
   "dependencies": {
     "enzyme": "^3.11.0",
+    "express": "^4.17.1",
     "node-telegram-bot-api": "^0.50.0",
     "nodemailer": "^6.4.11",
-    "pg": "^8.3.3",
+    "pg": "^8.4.1",
     "telegraf": "^3.38.0",
     "telegraf-inline-menu": "^5.1.0"
   },
